--- a/BloodDonor/view/controller/calendar/HSEventViewController.xib
+++ b/BloodDonor/view/controller/calendar/HSEventViewController.xib
@@ -35,7 +35,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="319059190">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="579151745">
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 109}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1007581772"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -58,7 +57,6 @@
 						<int key="NSvFlags">298</int>
 						<string key="NSFrame">{{180, 29}, {130, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="349767820"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -90,7 +88,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="898900240"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -105,7 +102,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 29}, {89, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="888102303"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -137,7 +133,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 68}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="557056225"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="278871441">
@@ -173,7 +168,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{103, 33}, {18, 14}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="883579600"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -188,7 +182,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 134}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="531825808"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -200,7 +193,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 111}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522862800"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -215,7 +207,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 109}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="103334164"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -246,7 +237,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 145}, {301, 100}}</string>
 						<reference key="NSSuperview" ref="319059190"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -271,15 +261,13 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 265}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="579151745"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="278871441"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="297999329">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="111771185">
@@ -287,7 +275,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="297999329"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="356500051"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -302,7 +289,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{0, 2}, {320, 434}}</string>
 						<reference key="NSSuperview" ref="297999329"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -311,8 +297,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 436}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="111771185"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -324,7 +308,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="181457685">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="859539592">
@@ -332,7 +316,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 140}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="262256123"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -347,7 +330,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 57}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="186740919"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -359,7 +341,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 25}, {135, 29}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="128747144"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -384,7 +365,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 99}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="837810446"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -410,7 +390,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 69}, {200, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="894565533"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -436,7 +415,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{148, 35}, {10, 13}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="376805095"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -451,7 +429,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 175}, {301, 3}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="771648396"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -463,7 +440,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{294, 152}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="719721950"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -475,7 +451,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 150}, {177, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="254960798"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -499,7 +474,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 186}, {301, 100}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1039551626"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -528,7 +502,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 313}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -558,7 +531,6 @@
 						<int key="NSvFlags">298</int>
 						<string key="NSFrame">{{180, 31}, {130, 21}}</string>
 						<reference key="NSSuperview" ref="181457685"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="497633611"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -580,8 +552,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 357}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="859539592"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="278871441"/>
@@ -900,7 +870,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">HSRemoteEventViewController</string>
+				<string key="-1.CustomClassName">HSEventViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -942,89 +912,6 @@
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">HSRemoteEventViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">eventDoneButtonClicked:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">eventDoneButtonClicked:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">eventDoneButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bloodDonationCommentLabel">UILabel</string>
-						<string key="bloodDonationDateLabel">UILabel</string>
-						<string key="bloodDonationLabAddressLabel">UILabel</string>
-						<string key="bloodDonationTypeLabel">UILabel</string>
-						<string key="bloodDonationView">UIView</string>
-						<string key="bloodTestsCommentsLabel">UILabel</string>
-						<string key="bloodTestsDateLabel">UILabel</string>
-						<string key="bloodTestsLabAddressLabel">UILabel</string>
-						<string key="bloodTestsView">UIView</string>
-						<string key="doneButton">UIButton</string>
-						<string key="rootScrollView">UIScrollView</string>
-						<string key="rootView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bloodDonationCommentLabel">
-							<string key="name">bloodDonationCommentLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationDateLabel">
-							<string key="name">bloodDonationDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationLabAddressLabel">
-							<string key="name">bloodDonationLabAddressLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationTypeLabel">
-							<string key="name">bloodDonationTypeLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodDonationView">
-							<string key="name">bloodDonationView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsCommentsLabel">
-							<string key="name">bloodTestsCommentsLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsDateLabel">
-							<string key="name">bloodTestsDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsLabAddressLabel">
-							<string key="name">bloodTestsLabAddressLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bloodTestsView">
-							<string key="name">bloodTestsView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="doneButton">
-							<string key="name">doneButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rootScrollView">
-							<string key="name">rootScrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rootView">
-							<string key="name">rootView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HSRemoteEventViewController.h</string>
-					</object>
-				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">SLabel</string>
 					<string key="superclassName">UILabel</string>
