--- a/BloodDonor/view/error/HSAlertViewController.xib
+++ b/BloodDonor/view/error/HSAlertViewController.xib
@@ -146,7 +146,7 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUITitleShadowOffset">{0, -1}</string>
-						<string key="IBUINormalTitle">Продолжить</string>
+						<string key="IBUINormalTitle">Ok</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="928928516">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -241,9 +241,11 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUINumberOfLines">0</int>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="376848992"/>
 						<reference key="IBUIFont" ref="324874919"/>
+						<double key="preferredMaxLayoutWidth">248</double>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
